# Ziren

./: .gitignore  Cargo.toml  README.md
crates/core/emulator/: Cargo.toml
crates/core/emulator/src/: lib.rs  memory.rs  utils.rs
crates/core/executor/: Cargo.toml
crates/core/executor/src/: air.rs  context.rs  cost.rs  dependencies.rs  executor.rs  hook.rs  instruction.rs  io.rs  lib.rs  memory.rs  opcode.rs  operation.rs  program.rs  programs.rs  record.rs  reduce.rs  register.rs  report.rs  shape.rs  state.rs  subproof.rs  utils.rs
crates/core/executor/src/artifacts/: mips_costs.json
crates/core/executor/src/events/: alu.rs  byte.rs  cpu.rs  global.rs  instr.rs  memory.rs  mod.rs  syscall.rs  utils.rs
crates/core/executor/src/syscalls/: code.rs  commit.rs  context.rs  deferred.rs  halt.rs  hint.rs  mod.rs  stdsys.rs  unconstrained.rs  verify.rs  write.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs  picus_annotations.rs
crates/p3-sect-fr/: Cargo.toml
crates/p3-sect-fr/src/: lib.rs  params.rs  poseidon2.rs
crates/picus/: Cargo.toml  README.md
crates/picus/src/: lib.rs  main.rs  picus_builder.rs
crates/picus/src/pcl/: expr.rs  mod.rs  partial_evaluator.rs  program.rs
crates/recursion/circuit/: Cargo.toml
crates/recursion/circuit/scripts/: circuit_architecture_sweep.rs
crates/recursion/circuit/src/: challenger.rs  constraints.rs  domain.rs  fri.rs  hash.rs  lib.rs  merkle_tree.rs  stark.rs  types.rs  utils.rs
crates/recursion/circuit/src/machine/: complete.rs  compress.rs  core.rs  deferred.rs  public_values.rs  root.rs  vkey_proof.rs  witness.rs  wrap.rs
crates/recursion/circuit/src/witness/: mod.rs  outer.rs  stark.rs
crates/recursion/compiler/: Cargo.toml
crates/recursion/compiler/src/: config.rs  lib.rs
crates/recursion/compiler/src/circuit/: builder.rs  compiler.rs  mod.rs
crates/stark/: Cargo.toml
crates/stark/src/: bb31_poseidon2.rs  chip.rs  config.rs  debug.rs  folder.rs  kb31_poseidon2.rs  lib.rs  machine.rs  opts.rs  permutation.rs  proof.rs  prover.rs  quotient.rs  record.rs  septic_curve.rs  septic_digest.rs  septic_extension.rs  stark.rs  stark_testing.rs  types.rs  verifier.rs  word.rs  zerofier_coset.rs
crates/stark/src/air/: builder.rs  extension.rs  machine.rs  mod.rs  picus_info.rs  polynomial.rs  public_values.rs  sub_builder.rs
crates/stark/src/generation/: mod.rs
crates/stark/src/lookup/: builder.rs  debug.rs  interaction.rs  lookup.rs
crates/stark/src/shape/: cluster.rs
crates/test-artifacts/guests/bls12381-add/: Cargo.toml
crates/test-artifacts/guests/bn254-add/: Cargo.toml
crates/test-artifacts/guests/sha2/: Cargo.toml
crates/test-artifacts/programs/revme/: Cargo.toml
crates/test-artifacts/programs/secp256r1-double/: Cargo.toml
crates/zkvm/entrypoint/: Cargo.toml
crates/zkvm/entrypoint/src/: heap.rs  lib.rs  libm.rs  memcpy.s  memset.s
examples/: Cargo.toml  testing-suite-gen.sh
examples/aggregation/guest/: Cargo.toml
examples/aggregation/guest/src/: main.rs
examples/aggregation/host/: Cargo.toml  build.rs
examples/aggregation/host/src/: main.rs
examples/bn254/guest/: Cargo.toml
examples/bn254/guest/src/: main.rs
examples/bn254/host/: Cargo.toml
examples/bn254/host/src/: main.rs
examples/chess/guest/: Cargo.toml
examples/chess/guest/src/: main.rs
examples/chess/host/: Cargo.toml
examples/chess/host/src/: main.rs
examples/cycle-tracking/guest/: Cargo.toml
examples/cycle-tracking/host/: Cargo.toml
examples/cycle-tracking/host/src/: main.rs
examples/fibonacci/guest/: Cargo.toml
examples/fibonacci/guest/src/: main.rs
examples/fibonacci/host/: Cargo.toml
examples/fibonacci/host/src/: main.rs
examples/fibonacci/program/: Cargo.toml
examples/fibonacci/script/: Cargo.toml  build.rs
examples/fibonacci/script/src/: main.rs
examples/fibonacci_c_lib/guest/: Cargo.toml
examples/fibonacci_c_lib/guest/src/: main.rs
examples/fibonacci_c_lib/host/: Cargo.toml  build.rs
examples/fibonacci_c_lib/host/src/: main.rs
examples/groth16/guest/: Cargo.toml
examples/groth16/guest/src/: main.rs
examples/groth16/host/: Cargo.toml
examples/groth16/host/src/: main.rs
examples/is-prime/guest/: Cargo.toml
examples/is-prime/guest/src/: main.rs
examples/is-prime/host/: Cargo.toml
examples/is-prime/host/src/: main.rs
examples/json/guest/: Cargo.toml
examples/json/guest/src/: main.rs
examples/json/host/: Cargo.toml
examples/json/host/src/: main.rs
examples/keccak-precompile/guest/: Cargo.toml
examples/keccak-precompile/guest/src/: main.rs
examples/keccak-precompile/host/: Cargo.toml
examples/keccak-precompile/host/src/: main.rs
examples/keccak-precompile/program/: Cargo.toml
examples/keccak-precompile/script/: Cargo.toml
examples/keccak-precompile/script/src/: main.rs
examples/large-sum/host/: Cargo.toml
examples/plonk/guest/: Cargo.toml
examples/plonk/guest/src/: main.rs
examples/plonk/host/: Cargo.toml  build.rs
examples/plonk/host/src/: main.rs
examples/regex/guest/: Cargo.toml
examples/regex/guest/src/: main.rs
examples/regex/host/: Cargo.toml
examples/regex/host/src/: main.rs
examples/revme/guest/: Cargo.toml
examples/revme/guest/src/: main.rs
examples/revme/host/: Cargo.toml
examples/revme/host/src/: main.rs
examples/revme/program/: Cargo.toml
examples/revme/program/src/: main.rs  utils.rs
examples/revme/script/: Cargo.toml
examples/revme/script/src/: main.rs
examples/revme/test-vectors/: test.json
examples/rsa/guest/: Cargo.toml
examples/rsa/guest/src/: main.rs
examples/rsa/host/: Cargo.toml
examples/rsa/host/src/: main.rs
examples/simple-go/host/: Cargo.toml  build.rs
examples/ssz-withdrawals/guest/: Cargo.toml
examples/ssz-withdrawals/guest/src/: main.rs
examples/ssz-withdrawals/host/: Cargo.toml  build.rs
examples/ssz-withdrawals/host/src/: main.rs
examples/tendermint/guest/: Cargo.toml
examples/tendermint/guest/src/: main.rs
examples/tendermint/host/: Cargo.toml
examples/tendermint/host/src/: main.rs
examples/unconstrained/host/src/: main.rs
src/: lib.rs  (+1 more)
(+586 files in other folders)
