[package]
name = "zkm2"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-air = { git = "https://github.com/Plonky3/Plonky3" }
p3-field = { git = "https://github.com/Plonky3/Plonky3" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3" }
p3-util = { git = "https://github.com/Plonky3/Plonky3" }
itertools = "0.13.0"
tracing = "0.1.37"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
p3-fri = { git = "https://github.com/Plonky3/Plonky3" }

p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3" }
#p3-commit = { git = "https://github.com/Plonky3/Plonky3", features = ["test-utils"] }
p3-circle = { git = "https://github.com/Plonky3/Plonky3" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3" }
p3-mds = { git = "https://github.com/Plonky3/Plonky3" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3" }
p3-mersenne-31 = { git = "https://github.com/Plonky3/Plonky3" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3" }
rand = "0.8.5"

[dev-dependencies]
postcard = { version = "1.0.0", default-features = false, features = ["alloc"] }
