[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"
repository = "https://github.com/zkMIPS/zkm2"
keywords = ["zkMIPS", "zkm", "zero-knowledge", "zkvm"]
categories = ["cryptography"]

[workspace]
members = [
    "crates/stark",
    "crates/derive",
    "crates/primitives",
    "crates/recursion/compiler",
    "crates/recursion/core",
    "crates/core/machine",
    "crates/core/executor",
    "crates/recursion/derive",
]
resolver = "2"


[profile.release]
opt-level = 3
[profile.bench]
opt-level = 3

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true


[workspace.dependencies]
p3-air = { git = "https://github.com/zkMIPS/Plonky3" }
p3-field = { git = "https://github.com/zkMIPS/Plonky3" }
p3-challenger = { git = "https://github.com/zkMIPS/Plonky3" }
p3-commit = { git = "https://github.com/zkMIPS/Plonky3" }
p3-dft = { git = "https://github.com/zkMIPS/Plonky3" }
p3-matrix = { git = "https://github.com/zkMIPS/Plonky3" }
p3-maybe-rayon = { git = "https://github.com/zkMIPS/Plonky3" }
p3-util = { git = "https://github.com/zkMIPS/Plonky3" }
p3-fri = { git = "https://github.com/zkMIPS/Plonky3" }
p3-baby-bear = { git = "https://github.com/zkMIPS/Plonky3" }
#p3-commit = { git = "https://github.com/zkMIPS/Plonky3", features = ["test-utils"] }
p3-circle = { git = "https://github.com/zkMIPS/Plonky3" }
p3-keccak = { git = "https://github.com/zkMIPS/Plonky3" }
p3-keccak-air = { git = "https://github.com/zkMIPS/Plonky3" }
p3-mds = { git = "https://github.com/zkMIPS/Plonky3" }
p3-merkle-tree = { git = "https://github.com/zkMIPS/Plonky3" }
p3-mersenne-31 = { git = "https://github.com/zkMIPS/Plonky3" }
p3-monty-31 = { git = "https://github.com/zkMIPS/Plonky3" }
p3-poseidon2 = { git = "https://github.com/zkMIPS/Plonky3" }
p3-symmetric = { git = "https://github.com/zkMIPS/Plonky3" }
p3-bn254-fr = { git = "https://github.com/zkMIPS/Plonky3" }
p3-uni-stark = { git = "https://github.com/zkMIPS/Plonky3" }

#p3-air        = { path = "../Plonky3/air" }
#p3-field      = { path = "../Plonky3/field" }
#p3-challenger = { path = "../Plonky3/challenger" }
#p3-commit     = { path = "../Plonky3/commit" }
#p3-dft        = { path = "../Plonky3/dft" }
#p3-matrix     = { path = "../Plonky3/matrix" }
#p3-maybe-rayon= { path = "../Plonky3/maybe-rayon" }
#p3-util       = { path = "../Plonky3/util" }
#p3-fri        = { path = "../Plonky3/fri" }
#p3-baby-bear  = { path = "../Plonky3/baby-bear" }
#p3-circle     = { path = "../Plonky3/circle" }
#p3-keccak     = { path = "../Plonky3/keccak" }
#p3-keccak-air = { path = "../Plonky3/keccak-air" }
#p3-mds        = { path = "../Plonky3/mds" }
#p3-merkle-tree= { path = "../Plonky3/merkle-tree" }
#p3-mersenne-31= { path = "../Plonky3/mersenne-31" }
#p3-monty-31   = { path = "../Plonky3/monty-31" }
#p3-poseidon2  = { path = "../Plonky3/poseidon2" }
#p3-symmetric  = { path = "../Plonky3/symmetric" }
#p3-bn254-fr   = { path = "../Plonky3/bn254-fr" }
#p3-uni-stark  = { path = "../Plonky3/uni-stark" }

itertools = "0.13.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false }
tracing-forest = { version = "0.1.6", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0.132"

rand = "0.8.5"

zkm2-recursion-derive = { path = "crates/recursion/derive", version = "0.0.1", default-features = false }
zkm2-recursion-compiler = { path = "crates/recursion/compiler", version = "0.0.1" }
zkm2-recursion-core = { path = "crates/recursion/core", version = "0.0.1", default-features = false }
zkm2-core-executor = { path = "crates/core/executor", version = "0.0.1", default-features = false }
zkm2-core-machine = { path = "crates/core/machine", version = "0.0.1", default-features = false }
zkm2-derive = { path = "crates/derive", version = "0.0.1" }
zkm2-primitives = { path = "crates/primitives", version = "0.0.1" }
zkm2-stark = { path = "crates/stark", version = "0.0.1" }

# misc
hashbrown = "0.14.5"
