[workspace]
members = [
  # "aggregation/program",
  # "aggregation/script",
  # "bls12381/program",
  # "bls12381/script",
  # "bn254/program",
  # "bn254/script",
  # "chess/program",
  # "chess/script",
  # "cycle-tracking/program",
  # "cycle-tracking/script",
  "fibonacci/program",
  "fibonacci/script",
  "keccak-precompile/program",
  "keccak-precompile/script",
  # "groth16/program",
  # "groth16/script",
  # "io/program",
  # "io/script",
  # "is-prime/program",
  # "is-prime/script",
  # "json/lib",
  # "json/program",
  # "json/script",
  # "patch-testing/program",
  # "patch-testing/script",
  # "regex/program",
  # "regex/script",
  # "rsa/program",
  # "rsa/script",
  # "rsp/program",
  # "rsp/script",
  # "ssz-withdrawals/program",
  # "ssz-withdrawals/script",
  # "tendermint/program",
  # "tendermint/script",
]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"

[workspace.dependencies]
zkm2-build = { path = "../crates/build" }
zkm2-derive = { path = "../crates/derive" }
zkm2-core-executor = { path = "../crates/core/executor" }
zkm2-core-machine = { path = "../crates/core/machine" }
zkm2-cli = { path = "../crates/cli", default-features = false }
zkm2-eval = { path = "../crates/eval", default-features = false }
zkm2-helper = { path = "../crates/helper", default-features = false }
zkm2-primitives = { path = "../crates/primitives" }
zkm2-prover = { path = "../crates/prover" }
zkm2-recursion-compiler = { path = "../crates/recursion/compiler" }
zkm2-recursion-core = { path = "../crates/recursion/core", default-features = false }
zkm2-recursion-derive = { path = "../crates/recursion/derive", default-features = false }
zkm2-recursion-gnark-ffi = { path = "../crates/recursion/gnark-ffi", default-features = false }
zkm2-recursion-program = { path = "../crates/recursion/program", default-features = false }
zkm2-recursion-circuit = { path = "../crates/recursion/circuit", default-features = false }
zkm2-sdk = { path = "../crates/sdk" }
zkm2-lib = { path = "../crates/zkvm/lib", default-features = false }
zkm2-zkvm = { path = "../crates/zkvm/entrypoint", default-features = false }

# misc
serde = "1.0.204"
serde_json = "1.0.132"
tracing = "0.1.40"
