[package]
name = "zkm-derive"
description = "Ziren derive"
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1"
syn = { version = "1.0", features = ["full"] }