[package]
name = "p3-sect-fr"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
p3-poseidon2.workspace = true
p3-field.workspace = true
p3-symmetric.workspace = true
serde.workspace = true
serde_json.workspace = true
ark-ff = "0.4"
lazy_static = "1.5.0"

rand = "0.8"
num-bigint = "0.4"
ff = { version = "0.13", features = [
    "derive",
    "derive_bits",
] }
num-traits = "0.2"
zkhash = "0.2"

[dev-dependencies]
p3-field-testing = { git = "https://github.com/ProjectZKM/Plonky3" }