[package]
name = "zkm2-stark"
version = "0.0.1"
edition = "2021"

[dependencies]
p3-air = { workspace = true  }
p3-field = { workspace = true  }
p3-challenger = { workspace = true  }
p3-commit = { workspace = true  }
p3-dft = { workspace = true  }
p3-matrix = { workspace = true  }
p3-maybe-rayon = { workspace = true, features = ["parallel"] }
p3-util = { workspace = true  }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["std", "env-filter"] }
tracing-forest = { workspace = true, features = ["ansi", "smallvec"] }
serde = { workspace = true }
p3-fri = { workspace = true  }
p3-uni-stark = { workspace = true }

p3-koala-bear  = { workspace = true  }
p3-circle = { workspace = true  }
p3-keccak = { workspace = true  }
p3-mds = { workspace = true  }
p3-merkle-tree = { workspace = true  }
p3-mersenne-31 = { workspace = true  }
p3-poseidon2 = { workspace = true  }
p3-symmetric = { workspace = true  }
rand = { workspace = true }

zkm2-derive = { workspace = true }
zkm2-primitives = { workspace = true }
zkm2-zkvm = { workspace = true }

strum = "0.26.3"
strum_macros = "0.26.4"
hashbrown = { version = "0.14.5", features = ["serde", "inline-more"] }
arrayref = "0.3.8"
rayon-scan = "0.1.1"

num-traits = "0.2.19"
sysinfo = "0.30.13"

[dev-dependencies]
postcard = { version = "1.0.0", default-features = false, features = ["alloc"] }
