[package]
name = "zkm2-core-emulator"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = "1.3.3"
serde = { workspace = true }
serde_json = { workspace = true }
byteorder = "1.5.0"
hex = "0.4"
lazy_static = "1.4.0"
elf = { version = "0.7", default-features = false }
log = { version = "0.4.14", default-features = false }
itertools = { workspace = true }
sha3 = "0.10.8"
