[package]
name = "zkm2-recursion-circuit"
description = "zkMIPS"
readme = "../../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-commit = { workspace = true }
p3-fri = { workspace = true }
p3-matrix = { workspace = true }
p3-util = { workspace = true }
p3-symmetric = { workspace = true }
p3-challenger = { workspace = true }
p3-dft = { workspace = true }
p3-bn254-fr = { workspace = true }
p3-koala-bear = { workspace = true }

zkm2-core-machine = { workspace = true }
zkm2-core-executor = { workspace = true }
zkm2-stark = { workspace = true }
zkm2-derive = { workspace = true }
zkm2-recursion-core = { workspace = true }
zkm2-recursion-compiler = { workspace = true }
zkm2-primitives = { workspace = true }
zkm2-recursion-gnark-ffi = { workspace = true }

itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rand = "0.8.5"
tracing = { workspace = true }
hashbrown = { workspace = true, features = ["serde", "inline-more"] }
num-traits = "0.2.19"
rayon = "1.10.0"
test-artifacts = { workspace = true, optional = true }

[dev-dependencies]
#zkm2-core-executor = { workspace = true, features = ["programs"] }
zkm2-core-executor = { workspace = true }
ff = { version = "0.13", features = ["derive", "derive_bits"] }
p3-challenger = { workspace = true }
p3-symmetric = { workspace = true }
p3-dft = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
zkhash = "0.2.0"
rand = "0.8.5"
test-artifacts = { workspace = true }

[features]
default = ["native-gnark"]
native-gnark = ["zkm2-recursion-gnark-ffi/native"]
export-tests = ["dep:test-artifacts"]
debug = ["zkm2-core-machine/debug"]
