[package]
name = "zkm2-zkvm"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
zkm2-lib = { path = "../lib" }
bincode = "1.3.3"
cfg-if = "1.0.0"
getrandom = { version = "0.2.14", features = ["custom"] }
rand = "0.8.5"
serde = { version = "1.0.201", features = ["derive"] }
libm = { version = "0.2.8", optional = true }
lazy_static = "1.4.0"
sha2 = { version = "0.10.8", default-features = false }
zkm2-primitives = { workspace = true, optional = true }
p3-baby-bear = { workspace = true, optional = true }
p3-field = { workspace = true, optional = true }

[features]
default = ["libm"]
libm = ["dep:libm"]
verify = [
  "dep:zkm2-primitives",
  "dep:p3-baby-bear",
  "dep:p3-field",
  "zkm2-lib/verify",
]
