[package]
name = "cycle-tracking"
version = "1.1.0"
edition = "2021"
publish = false

[[bin]]
name = "normal"
path = "bin/normal.rs"

[[bin]]
name = "report"
path = "bin/report.rs"

[dependencies]
zkm2-zkvm = { path = "../../../crates/zkvm/entrypoint" }
zkm2-derive = { path = "../../../crates/derive" }
