[package]
name = "cycle-tracking"
version = "1.1.0"
edition = "2021"
publish = false

[[bin]]
name = "normal"
path = "bin/normal.rs"

[[bin]]
name = "report"
path = "bin/report.rs"

[dependencies]
zkm-zkvm = { path = "../../../crates/zkvm/entrypoint" }
zkm-derive = { path = "../../../crates/derive" }
