[package]
name = "fibonacci-host"
version = { workspace = true }
edition = { workspace = true }
default-run = "fibonacci-host"
publish = false

[dependencies]
hex = "0.4.3"
zkm2-sdk = { workspace = true }

[build-dependencies]
zkm2-build = { workspace = true }

[[bin]]
name = "plonk_bn254"
path = "bin/plonk_bn254.rs"

[[bin]]
name = "groth16_bn254"
path = "bin/groth16_bn254.rs"

[[bin]]
name = "compressed"
path = "bin/compressed.rs"

[[bin]]
name = "execute"
path = "bin/execute.rs"

[[bin]]
name = "fibonacci-host"
path = "src/main.rs"

# [features]
# cuda = ["zkm2-sdk/cuda"]
