[package]
name = "revme-host"
version.workspace = true
edition.workspace = true
default-run = "revme-host"
publish = false

[dependencies]
zkm2-sdk = { workspace = true }
models = { git = "https://github.com/zkMIPS/revme", package = "models", branch = "deserialize" }
serde_cbor = "0.11.2"
serde_json = "1.0.132"

[build-dependencies]
zkm2-build = { workspace = true }

[[bin]]
name = "revme-host"
path = "src/main.rs"
