[package]
name = "revme-host"
version.workspace = true
edition.workspace = true
default-run = "revme-host"
publish = false

[dependencies]
zkm2-sdk = { workspace = true }
guest-std = { git = "https://github.com/zkMIPS/revme.git", package = "guest-std", branch = "cbor-zkm2" }

[build-dependencies]
zkm2-build = { workspace = true }

[[bin]]
name = "revme-host"
path = "src/main.rs"
