[package]
name = "revme-host"
version.workspace = true
edition.workspace = true
default-run = "revme-host"
publish = false

[dependencies]
zkm-sdk = { workspace = true }
guest-std = { git = "https://github.com/zkMIPS/revme.git", package = "guest-std", branch = "cbor-zkm" }

[build-dependencies]
zkm-build = { workspace = true }

[[bin]]
name = "revme-host"
path = "src/main.rs"
