[package]
name = "bls12381-add-test"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
common-test-utils = { path = "../common" }
zkm-zkvm = { path = "../../../../crates/zkvm/entrypoint" }
zkm-lib = { path = "../../../../crates/zkvm/lib" }
zkm-curves = { path = "../../../../crates/curves" }
