[package]
name = "bn254-add-test"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
common-test-utils = { path = "../common" }
zkm-lib = { path = "../../../../crates/zkvm/lib" }
zkm-zkvm = { path = "../../../../crates/zkvm/entrypoint" }
zkm-curves = { path = "../../../../crates/curves" }
