[package]
name = "sha2-test"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
zkm2-zkvm = { path = "../../../../crates/zkvm/entrypoint" }
hex-literal = "0.4.1"
sha2 = { git = "https://github.com/zkMIPS-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-0.10.8" }
hex = "0.4.3"
